Bug 355140 - Kleopatras decrypt verify mail Window moves each time it opens in Modern QWizard layout on Windows
Summary: Kleopatras decrypt verify mail Window moves each time it opens in Modern QWiz...
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: Assuan UI Server (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-10 16:13 UTC by Andre Heinecke
Modified: 2015-11-10 16:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Heinecke 2015-11-10 16:13:18 UTC
Kleopatra's decrypt verify mail result window does not correlctly restore it's size on Modern Windows (7 and later). This is with Kleopatra from gpg4win 2.2.6 (using Qt 4.8)



Reproducible: Always

Steps to Reproduce:
1. Decrypt a mail in Outlook
2. Close the window with finish
3. decrypt another mail

Actual Results:  
Window from step 3 has an y offset of about -10px and its width reduced by 10px and height increased by 10px.

Expected Results:  
Window should stay in place.

This bug is extremely obvious for every Outlook user on a modern system as after some operations kleopatra ends up leaving the desktop and gets thinner and larger.

As this works with other QWizard styles this is probably a bug in Qt 4.8's modern style. I could not find a distinct bugreport about it and reporting bugs against qt 4.8 is no longer useful.
Comment 1 Andre Heinecke 2015-11-10 16:20:16 UTC
Git commit f8a1b68d6a0b9adecca62462a76510def9fe72b6 by Andre Heinecke.
Committed on 10/11/2015 at 16:17.
Pushed by aheinecke into branch 'gpg4win'.

Fix decrypt-verify-email geometry restore

Hack to avoid a problem that showing the Wizard causes the
geometry to change. So the previosly restored geometry is changed
and then saved causing incremental worse changes to the geometry.

With this hack the dialog stays in place.

MERGE: Test first if this is still a problem with Qt5

M  +8    -0    kleopatra/crypto/decryptverifyemailcontroller.cpp

http://commits.kde.org/kdepim/f8a1b68d6a0b9adecca62462a76510def9fe72b6