Fix decrypt-verify-email geometry restore

Hack to avoid a problem that showing the Wizard causes the
geometry to change. So the previosly restored geometry is changed
and then saved causing incremental worse changes to the geometry.

With this hack the dialog stays in place.

MERGE: Test first if this is still a problem with Qt5

BUG: 355140